# sbolt

./: .gitignore  LICENSE  README.md
rust/benchmark/: Cargo.toml  build.rs
rust/benchmark/benches/: template_benches.rs
rust/benchmark/src/: lib.rs
rust/benchmark/views/: large.rshtml  test.rshtml
rust/core/lib/: Cargo.toml  TODO.txt
rust/core/lib/src/: lib.rs
rust/core/lib/src/codegen/: consts.rs  error.rs  mod.rs
rust/core/lib/src/codegen/compiler/: block.rs  cgresult.rs  compiler.rs  context.rs  dir.rs  error.rs  fsutil.rs  mod.rs  module.rs  name.rs  options.rs  registry.rs  result.rs  template.rs
rust/core/lib/src/codegen/compiler/optimizer/: default.rs  html.rs  mod.rs
rust/core/lib/src/codegen/compiler/optimizer/tests/: default.rs  html.rs  mod.rs
rust/core/lib/src/codegen/compiler/tests/: compiler.rs  error.rs  mod.rs  module.rs  name.rs  result.rs
rust/core/lib/src/codegen/compiler/types/: block.rs  code.rs  content.rs  directives.rs  error.rs  mod.rs  render.rs  section.rs  template.rs
rust/core/lib/src/codegen/compiler/types/tests/: block.rs  code.rs  content.rs  directives.rs  (+4 more)
rust/core/lib/src/codegen/parser/: mod.rs  span.rs
rust/core/lib/src/codegen/parser/doc/: block.rs  mod.rs
rust/core/lib/src/codegen/parser/html/: doc.rs  mod.rs  node.rs  parser.rs
rust/core/lib/src/codegen/parser/json/: mod.rs  object.rs  parser.rs
rust/core/lib/src/codegen/parser/optimizer/: default.rs  html.rs  mod.rs
rust/core/lib/src/codegen/parser/template/: block.rs  code.rs  content.rs  context.rs  mod.rs  template.rs  types.rs  util.rs  utils.rs
rust/core/lib/src/codegen/parser/tokenizer/: mod.rs  stream.rs  token.rs  tokenizer.rs
rust/core/lib/src/codegen/parser/types/: block.rs  comment.rs  context.rs  directives.rs  mod.rs  optimizer.rs  render.rs  section.rs  template.rs  transfer.rs  transition.rs  util.rs
rust/core/lib/src/codegen/types/: block.rs  mod.rs  span.rs  template.rs
rust/core/lib/src/codegen/views/: mod.rs  modgen.rs  viewgen.rs  viewmapgen.rs  viewtypes.rs
rust/core/lib/src/parser/: mod.rs
rust/core/lib/src/parser/template/: mod.rs
rust/core/lib/src/parser/tokenizer/: tokenizer.rs
rust/core/lib/src/runtime/: error.rs  html_writer.rs  kwriter.rs  mod.rs  string_writer.rs
rust/core/lib/src/runtime/tests/: context.rs  data_store.rs  error.rs  functions.rs  mod.rs  option.rs  template.rs  writer.rs
rust/core/lib/src/template/: mod.rs  template.rs
rust/core/lib/src/todo/: TODO.txt  block.txt  completed.txt  view.txt
rust/core/lib/src/types/: context.rs  data_store.rs  error.rs  functions.rs  macros.rs  mod.rs  result.rs  template.rs  writer.rs
rust/core/lib/src/types/tests/: data_store.rs  functions.rs  mod.rs
rust/core/lib/src/utils/: fs.rs  mod.rs  name.rs
rust/disguise/: Cargo.toml
(+88 files in other folders)
