[package]
name = "lib_bench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
disguise = { path = "../core/lib" }

[build-dependencies]
disguise = { path = "../core/lib", features = ["pretty"] }

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}

[[bench]]
name = "template_benches"
harness = false
