[package]
name = "disguise"
version = "0.0.1"
authors = ["Wei Gu"]
edition = "2024"
description = """
A view template engine in rust
"""
keywords = ["html", "layout", "template", "web"]
license = "MIT"
homepage = "https://github.com/gu-wei-x/disguise"
repository = "https://github.com/gu-wei-x/disguise"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
winnow = "0.7"

#optional
prettyplease = { version = "0.2", optional = true }

[features]
pretty = [ "prettyplease"]

