[package]
name = "sbolt"
version = "0.0.2"
authors = ["Wei Gu"]
edition = "2024"
description = """
A small and fast view template engine in rust
"""
keywords = ["html", "layout", "template", "web"]
readme = "../../../doc/en/lib_README.md"
license = "MIT"
homepage = "https://github.com/gu-wei-x/sbolt"
repository = "https://github.com/gu-wei-x/sbolt"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
winnow = "0.7"

#optional
prettyplease = { version = "0.2", optional = true }
indexmap = "2"

[features]
pretty = [ "prettyplease"]

